<resources>
    <string name="app_name">Libert Vendas</string>
    <string name="main_bottom_sheet_title">Adicionar novo</string>
    <string name="main_new_order">Pedido</string>
    <string name="main_new_customer">Cliente</string>
    <string name="main_drawer_item_dashboard">Início</string>
    <string name="main_drawer_item_orders_report">Relatório pedidos</string>
    <string name="main_drawer_item_orders">Seus pedidos</string>
    <string name="main_drawer_item_customers">Clientes conquistados</string>
    <string name="main_drawer_item_products">Produtos cadastrados</string>
    <string name="main_drawer_item_auto_sync_orders">Manter pedidos sincronizados</string>
    <string name="main_drawer_item_settings">Configurações</string>
    <string name="main_drawer_item_desc_last_sync">Última sincronização em %1$s</string>
    <string name="initial_flow_title">Faça a configuração</string>
    <string name="initial_flow_login_title">Entre com seu usuário</string>
    <string name="initial_flow_importation_title">Importe seus cadastros</string>
    <string name="settings_title">Configurações</string>
    <string name="settings_sync_preference_category_title">Sincronização</string>
    <string name="settings_server_address_preference_key" translatable="false">
        server_address
    </string>
    <string name="settings_server_address_preference_title">Url do servidor</string>
    <string name="settings_server_address_preference_dialog_title">Digite a url do servidor</string>
    <string name="settings_server_address_preference_summary">
        Endereço web do servidor para troca de dados
    </string>
    <string name="settings_auth_key_preference_key" translatable="false">auth_key</string>
    <string name="settings_auth_key_preference_title">Chave de autenticação</string>
    <string name="settings_auth_key_preference_default_value" translatable="false">
        626c6f63736b696e
    </string>
    <string name="settings_auth_key_preference_dialog_title">
        Confirme a chave de autenticação
    </string>
    <string name="settings_auth_key_preference_dialog_message">
        Informe o valor da chave de autenticação para conceder acesso ao servidor
    </string>
    <string name="settings_auth_key_preference_summary">
        Chave para autenticar sua identidade e obter acesso ao servidor
    </string>
    <string name="settings_automatically_sync_orders_preference_key" translatable="false">
        automatically_sync_orders
    </string>
    <string name="settings_automatically_sync_orders_preference_title">
        Sincronizar pedido automaticamente
    </string>
    <string name="settings_automatically_sync_orders_preference_summary">
        Se os pedidos deverão ser sincronizados automaticamente ou manualmente
    </string>
    <string name="settings_sync_periodicity_preference_key" translatable="false">
        sync_periodicity
    </string>
    <string name="settings_sync_periodicity_preference_title">
        Periodicidade da sincronização
    </string>
    <string name="settings_sync_periodicity_preference_dialog_title">
        Defina o periodicidade da sincronização
    </string>
    <string name="settings_sync_periodicity_preference_dialog_message">
        Informe um valor numérico em minutos
    </string>
    <string name="settings_sync_periodicity_preference_summary">A cada %1$s minutos</string>
    <string name="settings_invalid_setting_title">Configuração inválida</string>
    <string name="settings_invalid_server_address_message">
        Desculpe, a url do servidor informada é inválida.
    </string>
    <string name="settings_invalid_server_address_with_path_api_message">
        Desculpe, a url do servidor informada não deve conter a palavra API.
    </string>
    <string name="settings_invalid_auth_key_message">
        Desculpe, a chave de autenticação informada não deve conter espaços.
    </string>
    <string name="settings_invalid_sync_periodicity_message">
        Desculpe, a periodicidade da sincronização informada deve conter somente números.
    </string>
    <string name="settings_invalid_sync_periodicity_value_message">
        Desculpe, a periodicidade da sincronização deve ser acima de 0.
    </string>
    <string name="login_user_identity_hint">Informe seu CPF ou CNPJ</string>
    <string name="login_user_password_hint">Informe sua senha</string>
    <string name="login_action">Entrar</string>
    <string name="login_logging_in_fail_text">Falhou</string>
    <string name="login_logging_in_completed_text">Sucesso</string>
    <string name="login_logging_in_progress_text">Logando…</string>
    <string name="login_user_identity_not_set_error">Precisamos do seu CPF ou CNPJ</string>
    <string name="login_user_password_not_set_error">A senha está vazia</string>
    <string name="login_salesman_with_no_companies_error">
        Este vendedor não possui empresas cadastradas. Peça ao administrador do sistema
        para cadastrar e tente novamente!
    </string>
    <string name="login_working_progress_message">Estamos fazendo seu login…</string>
    <string name="login_select_default_company">
        Selecione qual empresa será usada por padrão.
    </string>
    <string name="importation_states_and_cities">Estados e Cidades</string>
    <string name="importation_company_name_example">Verdeshop DF</string>
    <string name="importation_completed">Importação completada</string>
    <string name="importation_completed_message">
        Seus cadastros foram importados com sucesso. Vamos prosseguir!
    </string>
    <string name="importation_getting_server_status">Estamos concluindo a importação…</string>
    <string name="dashboard_fragment_title">Início</string>
    <string name="dashboard_error_loading_orders_grouped">
        Desculpe, houve uma falha quando tentamos carregar os dados do gráfico.
        Por favor tente novamente!
    </string>
    <string name="dashboard_no_orders">Seus pedidos são representados em gráfico aqui</string>
    <string name="dashboard_chart_label">Todos Pedidos realizados</string>
    <string name="dashboard_chart_center_text">Pedidos\nPor Cliente</string>
    <string name="order_list_example_order_number">Nº 200852</string>
    <string name="order_list_example_customer_name">Cliente Gustavo Costa Alves</string>
    <string name="order_list_example_total_order">Total R$ 204.89</string>
    <string name="order_list_example_order_date">Emissão 14/09/2016</string>
    <string name="order_list_no_orders">Seus pedidos são listados aqui</string>
    <string name="order_list_all_orders_fragment_title">Todos pedidos</string>
    <string name="order_list_pending_orders_fragment_title">Pedidos não enviados</string>
    <string name="order_list_fragment_title">Seus pedidos</string>
    <string name="order_list_search_hint">Use o nome do cliente</string>
    <string name="order_list_template_text_order_date">Emissão %1$s</string>
    <string name="order_list_template_text_order_number">Nº %1$d</string>
    <string name="order_list_template_text_order_total">Total %1$s</string>
    <string name="order_list_template_text_customer_name">Cliente %1$s</string>
    <string name="order_list_duplicate_item">Duplicar pedido</string>
    <string name="order_list_sync_items">Sincronizar pedidos</string>
    <string name="order_list_multi_selection_only_for_same_status">
        Pedidos com status diferentes não pode ser selecionados!
    </string>
    <string name="order_list_single_selection_to_duplicate_order">
        Somente 1 pedido por vez pode ser duplicado!
    </string>
    <string name="order_list_instant_sync_done">
        Seus pedidos foram sincronizados com sucesso!
    </string>
    <string name="customer_list_error_loading_customers">
        Desculpe, houve uma falha quando tentamos carregar os dados de seus pedidos.
        Por favor tente novamente!
    </string>
    <string name="customer_list_no_customers">Seus clientes são listados aqui</string>
    <string name="customer_list_example_social_name">Waldomiro Martins Braga</string>
    <string name="customer_list_example_fantasy_name">Waldomiro Martins Braga</string>
    <string name="customer_list_example_cpf_or_cnpj">04561366000190</string>
    <string name="customer_list_example_phone">(62) 3524 – 1936</string>
    <string name="customer_list_example_email">waldomiro.martins.braga@mail.com</string>
    <string name="customer_list_fragment_title">Seus clientes</string>
    <string name="customer_list_search_hint">Use Código, CPF/CNPJ, nome ou contato</string>
    <string name="customer_list_template_text_phones">%1$s &#47; %2$s</string>
    <string name="customer_list_text_no_phone">Sem telefone</string>
    <string name="customer_list_text_no_email">Sem e-mail</string>
    <string name="customer_list_text_no_fantasy_name">Sem nome fantasia</string>
    <string name="customer_list_example_customer_code">Cód. 00000401</string>
    <string name="customer_list_template_customer_code">Cód. %1$s</string>
    <string name="customer_list_text_no_customer_code">Sem código</string>
    <string name="product_list_error_loading_products">
        Desculpe, houve uma falha quando tentamos carregar os dados de seus produtos.
        Por favor tente novamente!
    </string>
    <string name="product_list_no_products">Seus produtos são listados aqui</string>
    <string name="product_list_example_product_name">Achocolatado 200g</string>
    <string name="product_list_example_product_price">Preço R$ 4.49</string>
    <string name="product_list_example_stock_quantity">Quantidade 100</string>
    <string name="product_list_fragment_title">Seus produtos</string>
    <string name="product_list_search_hint">Use descrição ou código barras</string>
    <string name="product_list_template_product_price">Preço %1$s</string>
    <string name="product_list_template_product_stock_quantity">Quantidade %1$s</string>
    <string name="orders_report_list_error_loading_report">
        Desculpe, houve uma falha quando tentamos carregar os dados do relatório de pedidos.
        Por favor tente novamente!
    </string>
    <string name="orders_report_fragment_title">Relatório pedidos</string>
    <string name="add_customer_select_type_of_person_hint">Selecione o tipo de pessoa</string>
    <string name="add_customer_type_of_person_label">Tipo de pessoa selecionado</string>
    <string name="add_customer_cpf_or_cnpj_hint">CPF&#47;CNPJ</string>
    <string name="add_customer_customer_name_hint">Nome</string>
    <string name="add_customer_fantasy_name_hint">Nome fantasia</string>
    <string name="add_customer_email_hint">E-mail</string>
    <string name="add_customer_address_hint">Endereço</string>
    <string name="add_customer_address_number_hint">Número</string>
    <string name="add_customer_district_hint">Bairro</string>
    <string name="add_customer_select_state_hint">Selecione o estado</string>
    <string name="add_customer_state_label">Estado selecionado</string>
    <string name="add_customer_select_city_hint">Selecione a cidade</string>
    <string name="add_customer_postal_code_hint">CEP</string>
    <string name="add_customer_address_complement_hint">Complemento</string>
    <string name="add_customer_main_phone_hint">Telefone principal</string>
    <string name="add_customer_another_phone_hint">Outro telefone</string>
    <string name="dialog_orders_report_filter_status_title">Status</string>
    <string name="dialog_orders_report_filter_status_all">Todos</string>
    <string name="dialog_orders_report_filter_status_pending">Pendentes</string>
    <string name="dialog_orders_report_filter_status_sent">Enviados</string>
    <string name="dialog_orders_report_filter_issue_date_title">Emitido entre</string>
    <string name="all_and"><![CDATA[&]]></string>
    <string name="all_issue_date_initial">Data inicial</string>
    <string name="all_issue_date_final">Data final</string>
</resources>