<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_add_customers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_customer"
    tools:context=".presentation.addcustomer.AddCustomerActivity"
    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/keyline_xlarge"
        android:paddingRight="@dimen/keyline_xlarge"
        android:paddingTop="@dimen/keyline_large"
        android:paddingBottom="@dimen/keyline_large"
        android:stretchColumns="1"
        >

        <TableRow>
            <ImageView
                android:layout_width="@dimen/size_all_left_icon_size"
                android:layout_height="@dimen/size_all_left_icon_size"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/add_customer_business_grey_24dp"
                />

            <br.com.libertsolutions.libertvendas.app.presentation.widget.MaterialSpinner
                style="@style/Widget.LibertApp.Spinner"
                android:id="@+id/spinner_type_of_person"
                android:layout_marginLeft="@dimen/margin_material_spinner"
                android:layout_marginStart="@dimen/margin_material_spinner"
                android:layout_marginRight="@dimen/keyline_small"
                android:layout_marginEnd="@dimen/keyline_small"
                android:layout_column="1"
                app:ms_hint="@string/add_customer_select_type_of_person_hint"
                app:ms_floatingLabelText="@string/add_customer_type_of_person_label"
                />
        </TableRow>

        <TableRow>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_cpf_or_cnpj"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_cpf_or_cnpj"
                    android:hint="@string/add_customer_cpf_or_cnpj_hint"
                    android:inputType="numberSigned"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@id/input_layout_customer_name"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_customer_name"
                    android:hint="@string/add_customer_customer_name_hint"
                    android:inputType="text|textCapWords"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_fantasy_name"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_fantasy_name"
                    android:hint="@string/add_customer_fantasy_name_hint"
                    android:inputType="text|textCapWords"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <ImageView
                android:layout_width="@dimen/size_all_left_icon_size"
                android:layout_height="@dimen/size_all_left_icon_size"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/all_email_grey_24dp"
                />

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_email"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_email"
                    android:hint="@string/add_customer_email_hint"
                    android:inputType="textEmailAddress"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <ImageView
                android:layout_width="@dimen/size_all_left_icon_size"
                android:layout_height="@dimen/size_all_left_icon_size"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/add_customer_place_grey_24dp"
                />

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_address"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_address"
                    android:hint="@string/add_customer_address_hint"
                    android:inputType="text|textCapWords"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_address_number"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_address_number"
                    android:hint="@string/add_customer_address_number_hint"
                    android:inputType="numberSigned"
                    android:maxLength="6"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_district"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_district"
                    android:hint="@string/add_customer_district_hint"
                    android:inputType="text|textCapWords"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <br.com.libertsolutions.libertvendas.app.presentation.widget.MaterialSpinner
                style="@style/Widget.LibertApp.Spinner"
                android:id="@+id/spinner_state"
                android:layout_marginLeft="@dimen/margin_material_spinner"
                android:layout_marginStart="@dimen/margin_material_spinner"
                android:layout_marginRight="@dimen/keyline_small"
                android:layout_marginEnd="@dimen/keyline_small"
                android:layout_column="1"
                app:ms_hint="@string/add_customer_select_state_hint"
                app:ms_floatingLabelText="@string/add_customer_state_label"
                />
        </TableRow>

        <TableRow>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_city"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.NonEditableField"
                    android:id="@+id/edit_text_city"
                    android:hint="@string/add_customer_select_city_hint"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_postal_code"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_postal_code"
                    android:hint="@string/add_customer_postal_code_hint"
                    android:inputType="numberSigned"
                    android:maxLength="8"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_address_complement"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_address_complement"
                    android:hint="@string/add_customer_address_complement_hint"
                    android:inputType="text|textCapSentences"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <ImageView
                android:layout_width="@dimen/size_all_left_icon_size"
                android:layout_height="@dimen/size_all_left_icon_size"
                android:layout_gravity="center_vertical"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/all_phone_grey_24dp"
                />

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_main_phone"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_main_phone"
                    android:hint="@string/add_customer_main_phone_hint"
                    android:inputType="phone"
                    android:maxLength="11"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.LibertApp.FormInputLayout"
                android:id="@+id/input_layout_other_phone"
                android:layout_marginLeft="@dimen/keyline_large"
                android:layout_marginStart="@dimen/keyline_large"
                android:layout_column="1"
                >

                <android.support.design.widget.TextInputEditText
                    style="@style/Widget.LibertApp.EditableField"
                    android:id="@+id/edit_text_other_phone"
                    android:hint="@string/add_customer_another_phone_hint"
                    android:inputType="phone"
                    android:imeOptions="actionDone"
                    android:maxLength="11"
                    />

            </android.support.design.widget.TextInputLayout>
        </TableRow>

    </TableLayout>
</android.support.v4.widget.NestedScrollView>
