<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <android.support.v7.widget.CardView
        style="@style/Widget.LibertApp.CardView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/text_view_social_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/keyline_medium"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:text="@string/customer_list_example_social_name"
                />

            <TextView
                android:id="@+id/text_view_fantasy_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/keyline_medium"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="@string/customer_list_example_fantasy_name"
                />

            <TextView
                android:id="@+id/text_view_cpf_or_cnpj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/all_vector_company_grey_24dp"
                android:drawableStart="@drawable/all_vector_company_grey_24dp"
                android:paddingBottom="@dimen/keyline_medium"
                android:drawablePadding="@dimen/keyline_large"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                tools:text="@string/customer_list_example_cpf_or_cnpj"
                />

            <TextView
                android:id="@+id/text_view_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/all_vector_phone_grey_24dp"
                android:drawableStart="@drawable/all_vector_phone_grey_24dp"
                android:paddingBottom="@dimen/keyline_medium"
                android:drawablePadding="@dimen/keyline_large"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                tools:text="@string/customer_list_example_phone"
                />

            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/all_vector_email_grey_24dp"
                android:drawableStart="@drawable/all_vector_email_grey_24dp"
                android:drawablePadding="@dimen/keyline_large"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                tools:text="@string/customer_list_example_email"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>